fixing bg p overflow

--- a/style.css
+++ b/style.css
@@ -189,6 +189,6 @@ body > p {
   }
 
   body > p {
-    display: none;
+    overflow: hidden;
   }
 }
